Final version of problem definition.

--- a/reports/problem_definition.ipynb
+++ b/reports/problem_definition.ipynb
@@ -29,11 +29,38 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## I.1. Cel biznesowy\n",
+    "Chcemy konsultantom dostarczyć informację w postaci przewidzenia, czy dana sesja użytkownika korzystającego ze sklepu e-commerce zakończy się zakupem, aby mogli oni szybciej rozwiązywać potencjalne problemy."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "\n",
-    "## I.1. Obecna sytuacja\n",
-    "+ Obecnie, w trakcie trwania sesji sklep zbiera informacje o sesji, tzn. jej identyfikator, dokładny moment czasu jej wystąpienia, informacje o użytkowniku, którego dotyczy sesja, informację o samym produkcie, którego dotyczy sesja, a także czy sesja ta jest zakupem produktu, czy jego obejrzeniem.\n",
-    "+ Pozostałe dane, jakie gromadzi sklep dotyczą samych użytkowników (sklep posiada ich bazę), katalogu produktów i dane dotyczące wysyłki zakupionych produktów.\n",
-    "+ Obecnie klient biznesowy dowiaduje się o zakupie, dopiero po zakończonej sesji użytkownika w sklepie."
+    "## I.2. Obecna sytuacja\n",
+    "Obecnie, w trakcie trwania sesji sklep zbiera informacje o zdarzeniach, które w ramach jej wystąpiły, tzn.:\n",
+    "+ identyfikator sesji, której dotyczy zdarzenie,\n",
+    "+ dokładny moment wystąpienia zdarzenia,\n",
+    "+ informacje o użytkowniku, którego dotyczy zdarzenie,\n",
+    "+ informację o produkcie, którego dotyczy zdarzenie,\n",
+    "+ a także czy zdarzenie to jest zakupem produktu, czy jego obejrzeniem.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Pozostałe dane, jakie gromadzi sklep dotyczą:\n",
+    "+ użytkowników (sklep posiada ich bazę),\n",
+    "+ katalogu produktów,\n",
+    "+ wysyłek zakupionych produktów.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Obecnie konsultant dowiaduje się o zakupie dopiero po zakończonej sesji użytkownika w sklepie. Sesja klientów w sklepie może nie zakończyć się zakupem, ze względu na występujące po drodze problemy natury zarówno technicznej jaki i decyzyjnej. Jeśli konsultant miałby informację o potencjalnym zainteresowaniu użytkownika przed jego rezygnacją z zakupu, mógłby mu udzielić pomocy."
    ],
    "metadata": {
     "collapsed": false,
@@ -46,10 +73,7 @@
    "cell_type": "markdown",
    "source": [
     "## I.3. Potencjalne ograniczenia\n",
-    "+ Najważniejszym ograniczeniem w tym zadaniu jest czas - zależy nam na tym, żeby predykować zakup przed samym zakończeniem sesji - chcemy być szybsi od decyzji użytkownika o zakupie.\n",
-    "+ Dodatkowo, trzeba mieć na uwadze, że sklep nie będzie miał informacji o typowym zachowaniu użytkownika w sklepie, w przypadku użytkownika, który odwiedza go pierwszy raz - mimo to, dobrze by było wnioskować z analizy sesji, czy jest możliwość dokonania zakupu.\n",
-    "+ Model jest budowany jedynie na podstawie dostarczonych przez klienta biznesowego danych, zbieranie ich jest bardzo czasochłonne.\n",
-    "+ Musimy brać pod uwagę również zasoby - istotny jest czas jaki jest wymagany do wytrenowania modelu, jak i zasoby sprzętowe komputera, na którym ma miejsce trenowanie."
+    "Ograniczeniem w tym zadaniu jest czas - zależy nam na tym, żeby przewidywać zakup przed samym zakończeniem sesji - chcemy być szybsi od decyzji użytkownika o zakupie/rezygnacji z zakupu. Dodatkowo, model jest budowany jedynie na podstawie dostarczonych przez klienta biznesowego danych, zbieranie ich samemu byłoby bardzo czasochłonne."
    ],
    "metadata": {
     "collapsed": false,
@@ -73,8 +97,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## II.1. Dane do modelowania\n",
-    "+"
+    "## II.1. Definicja zadania modelowania\n",
+    "Przygotowanie modelu klasyfikacji binarnej sekwencji na podstawie danych dostarczanych przez sklep."
    ],
    "metadata": {
     "collapsed": false,
@@ -86,10 +110,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## II.2. Wyjście modelowania\n",
-    "+ Interesującym konsultantów w sklepie, wynikiem modelowania będzie prawdopodobieństwo zakończenia danej sesji zakupem.\n",
-    "+ Sama informacja w postaci klasyfikacji binarnej byłaby mało informatywna dla konsultantów.\n",
-    "+ Dodatkowo, w przypadku wielu klientów, prawdopodobieństwo pozwala konsultantom decydować, którym klientem warto się zająć."
+    "## II.2. Atrybuty wejściowe\n",
+    "Dane o sesji, w postaci zdarzeń, które wystąpiły w ramach sesji użytkownika, której zakończenie przewidujemy. Zakładamy, że w przekazywanych danych będą również informacje o kliencie sklepu, a także o produktach, których sesja dotyczy."
    ],
    "metadata": {
     "collapsed": false,
@@ -101,8 +123,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## II.3. Definicja zadania modelowania\n",
-    "+ Chcemy przewidywać prawdopodobieństwa zakończenia sesji zakupem przy użyciu zadania regresji, gdzie predykcje są liczbami ciągłymi z zakresu $<0;1>$."
+    "## II.3. Wyjście modelowania\n",
+    "Decyzja o tym, czy dana sesja zakończy się zakupem czy nie."
    ],
    "metadata": {
     "collapsed": false,
@@ -127,7 +149,7 @@
    "cell_type": "markdown",
    "source": [
     "## III.1. Kryteria biznesowe\n",
-    "+ System ma poprawić obecną sytuację - informacja o zakończeniu sesji zakupem będzie przewidywana przed jej zakończeniem. Sumarycznie wszystkie predykcje systemu mają zaoszczędzić czas konsultantom.\n"
+    "System ma poprawić obecną sytuację - informacja o zakończeniu sesji zakupem będzie przewidywana przed jej zakończeniem.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -140,8 +162,10 @@
    "cell_type": "markdown",
    "source": [
     "## III.2. Kryteria analityczne\n",
-    "+ Chcemy osiągnąć wysoką wartość metryki Recall, która w naszym przypadku oznacza stosunek liczby sesji trafnie sklasyfikowanych jako zakończone zakupem do liczby wszystkich sesji zakończonych zakupem. Metryka ta jest w naszym zadaniu istotna, ponieważ duże znaczenie ma zauważenie przez konsultanta jak największej liczby sesji, które zakończą się zakupem. Konsultant może pozwolić sobie na niedużą stratę czasu związaną ze zwróceniem uwagi na sesję nie zakończoną zakupem, jednak nie chcemy, żeby nie zauważył sesji, która takim zakupem się kończy.\n",
-    "+ Tak więc istotne jest spełnienie: $$ \\frac{\\text{liczba trafnych przewidzeń zakupu w sesjach w danym dniu}}{\\text{liczba zakupów w sesjach w danym dniu}} > \\frac{2}{3}$$"
+    "\n",
+    "Chcemy osiągnąć wysoką wartość metryki recall, która w naszym przypadku oznacza stosunek liczby sesji trafnie sklasyfikowanych jako zakończone zakupem do liczby wszystkich sesji zakończonych zakupem. Metryka ta jest w naszym zadaniu istotna, ponieważ duże znaczenie ma zauważenie przez konsultanta jak największej liczby sesji, które zakończą się zakupem. Konsultant może pozwolić sobie na niedużą stratę czasu związaną ze zwróceniem uwagi na sesję nie zakończoną zakupem, jednak nie chcemy, żeby nie zauważył sesji, która takim zakupem się kończy.\n",
+    "<br>\n",
+    "Tak więc istotne jest spełnienie warunku: $$ \\frac{\\text{liczba trafnych przewidzeń zakupu w sesjach w danym dniu}}{\\text{liczba zakupów w sesjach w danym dniu}} > \\alpha$$ gdzie $\\alpha$ to wartość metryki recall dla modelu działającego w sposób naiwny, tzn. przewidujący zakup na podstawie czasu trwania danej sesji."
    ],
    "metadata": {
     "collapsed": false,
