--- a/notebooks/data_exploration/product_analysis.ipynb
+++ b/notebooks/data_exploration/product_analysis.ipynb
@@ -42,7 +42,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 1. Import tabeli"
+    "## 1. Import tabeli"
    ],
    "metadata": {
     "collapsed": false,
@@ -206,6 +206,18 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
