--- a/reports/problem_definition.ipynb
+++ b/reports/problem_definition.ipynb
@@ -30,7 +30,8 @@
    "cell_type": "markdown",
    "source": [
     "## I.1. Cel biznesowy\n",
-    "Chcemy konsultantom dostarczyć informację w postaci przewidzenia, czy dana sesja użytkownika korzystającego ze sklepu e-commerce zakończy się zakupem, aby mogli oni szybciej rozwiązywać potencjalne problemy."
+    "Chcemy konsultantom dostarczyć informację w postaci przewidzenia, czy dana sesja użytkownika korzystającego ze sklepu e-commerce zakończy się zakupem, aby mogli oni szybciej rozwiązywać potencjalne problemy.\n",
+    "<b>Predykcja będzie przyjmowała wartość 0 lub 1, gdzie 0 oznacza przewidzenie, że dana sesja użytkownika nie zakończy się zakupem, natomiast 1 - zakończenie zakupem sesji użytkownika.</b>"
    ],
    "metadata": {
     "collapsed": false,
@@ -149,7 +150,7 @@
    "cell_type": "markdown",
    "source": [
     "## III.1. Kryteria biznesowe\n",
-    "System ma poprawić obecną sytuację - informacja o zakończeniu sesji zakupem będzie przewidywana przed jej zakończeniem.\n"
+    "System ma poprawić obecną sytuację - informacja o zakończeniu sesji zakupem będzie przewidywana przed jej zakończeniem<b>, przy czym przewidywania te mają być lepsze od takich, które są zupełnie losowe czy przewidywane jedynie na podstawie długości trwania sesji danego użytkownika</b>.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -163,9 +164,23 @@
    "source": [
     "## III.2. Kryteria analityczne\n",
     "\n",
-    "Chcemy osiągnąć wysoką wartość metryki recall, która w naszym przypadku oznacza stosunek liczby sesji trafnie sklasyfikowanych jako zakończone zakupem do liczby wszystkich sesji zakończonych zakupem. Metryka ta jest w naszym zadaniu istotna, ponieważ duże znaczenie ma zauważenie przez konsultanta jak największej liczby sesji, które zakończą się zakupem. Konsultant może pozwolić sobie na niedużą stratę czasu związaną ze zwróceniem uwagi na sesję nie zakończoną zakupem, jednak nie chcemy, żeby nie zauważył sesji, która takim zakupem się kończy.\n",
+    "<b>Chcemy osiągnąć lepszą wartość współczynnika accuracy, która w naszym przypadku oznacza stosunek liczby sesji trafnie sklasyfikowanych do liczby wszystkich sesji niż wartość tego współczynnika dla modelu działającego naiwnie, tzn. wykonującego predykcje jedynie na podstawie wartości czasu trawania danej sesji (w sekundach).</b>\n",
     "<br>\n",
-    "Tak więc istotne jest spełnienie warunku: $$ \\frac{\\text{liczba trafnych przewidzeń zakupu w sesjach w danym dniu}}{\\text{liczba zakupów w sesjach w danym dniu}} > \\alpha$$ gdzie $\\alpha$ to wartość metryki recall dla modelu działającego w sposób naiwny, tzn. przewidujący zakup na podstawie czasu trwania danej sesji."
+    "Tak więc istotne jest spełnienie warunku: $$ \\frac{\\text{liczba trafnych predykcji naszego modelu w danym dniu}}{\\text{liczba sesji w danym dniu}} > \\alpha$$ gdzie $\\alpha$ to <b>accuracy dla modelu działającego w sposób naiwny, tzn. przewidujący zakup na podstawie czasu trwania danej sesji (gdzie próg czasu uznający sesję za kończącą się zakupem będzie wyznaczany z użyciem danych już dostępnych)</b>."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>W celu wyznaczenia dokładnej wartości współczynnika $\\alpha$ na posiadanych już danych, wykonaliśmy odpowiednie obliczenia w notatniku naive_model.ipynb, gdzie stworzyliśmy model działający w sposób naiwny. Na podstawie wyliczeń na otrzymanych danych uznaliśmy, że próg decydujący o zakończeniu sesji zakupem dla modelu naiwnego (o najwyszym accuracy) będzie wynosił 5 sekund czasu trwania sesji.</b>\n",
+    "\n",
+    "<b>Na podstawie decyzji modelu (posiłkującego się tym progiem) wyliczyliśmy współczynnik $\\alpha$ na dostępnych danych: </b>$$\\alpha=0.35$$"
    ],
    "metadata": {
     "collapsed": false,
