Add label definition

--- a/reports/problem_definition.ipynb
+++ b/reports/problem_definition.ipynb
@@ -111,7 +111,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## II.2. Atrybuty wejściowe\n",
+    "## II.2. Dane wejściowe\n",
     "Dane o sesji, w postaci zdarzeń, które wystąpiły w ramach sesji użytkownika, której zakończenie przewidujemy. Zakładamy, że w przekazywanych danych będą również informacje o kliencie sklepu, a także o produktach, których sesja dotyczy."
    ],
    "metadata": {
@@ -124,8 +124,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## II.3. Wyjście modelowania\n",
-    "Decyzja o tym, czy dana sesja zakończy się zakupem czy nie."
+    "## II.3. Zmienna celu\n",
+    "Zmienna binarna przyjmująca wartości:\n",
+    "- 0 - gdy sesja nie zakończy się zakupem\n",
+    "- 1 - gdy sesja zakończy się zakupem"
    ],
    "metadata": {
     "collapsed": false,
