predictions of naive model

--- a/reports/problem_definition.ipynb
+++ b/reports/problem_definition.ipynb
@@ -111,7 +111,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## II.2. Dane wejściowe\n",
+    "## II.2. Atrybuty wejściowe\n",
     "Dane o sesji, w postaci zdarzeń, które wystąpiły w ramach sesji użytkownika, której zakończenie przewidujemy. Zakładamy, że w przekazywanych danych będą również informacje o kliencie sklepu, a także o produktach, których sesja dotyczy."
    ],
    "metadata": {
@@ -124,10 +124,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## II.3. Zmienna celu\n",
-    "Zmienna binarna przyjmująca wartości:\n",
-    "- 0 - gdy sesja nie zakończy się zakupem\n",
-    "- 1 - gdy sesja zakończy się zakupem"
+    "## II.3. Wyjście modelowania\n",
+    "Decyzja o tym, czy dana sesja zakończy się zakupem czy nie."
    ],
    "metadata": {
     "collapsed": false,
@@ -182,7 +180,7 @@
    "source": [
     "<b>W celu wyznaczenia dokładnej wartości współczynnika $\\alpha$ na posiadanych już danych, wykonaliśmy odpowiednie obliczenia w notatniku naive_model.ipynb, gdzie stworzyliśmy model działający w sposób naiwny. Na podstawie wyliczeń na otrzymanych danych uznaliśmy, że próg decydujący o zakończeniu sesji zakupem dla modelu naiwnego (o najwyszym accuracy) będzie wynosił 5 sekund czasu trwania sesji.</b>\n",
     "\n",
-    "<b>Na podstawie decyzji modelu (posiłkującego się tym progiem) wyliczyliśmy współczynnik $\\alpha$ na dostępnych danych: </b>$$\\alpha=0.35$$"
+    "<b>Na podstawie decyzji modelu (posiłkującego się tym progiem) wyliczyliśmy współczynnik $\\alpha$ na dostępnych danych: </b>$$\\alpha=0.69$$"
    ],
    "metadata": {
     "collapsed": false,
