Modify problem_definition and add test_predict_model

--- a/reports/problem_definition.ipynb
+++ b/reports/problem_definition.ipynb
@@ -31,7 +31,9 @@
    "source": [
     "## I.1. Cel biznesowy\n",
     "Chcemy konsultantom dostarczyć informację w postaci przewidzenia, czy dana sesja użytkownika korzystającego ze sklepu e-commerce zakończy się zakupem, aby mogli oni szybciej rozwiązywać potencjalne problemy.\n",
-    "<b>Predykcja będzie przyjmowała wartość 0 lub 1, gdzie 0 oznacza przewidzenie, że dana sesja użytkownika nie zakończy się zakupem, natomiast 1 - zakończenie zakupem sesji użytkownika.</b>"
+    "<b>Predykcja będzie wartością ciągłą mówiącą o pewności modelu co do tego, że sesja zakończy się zakupem - na przykład wyjście modelu równe 0.8 znaczyłoby, że model z pewnością 80% przewiduje, że sesja zakończy się zakupem, natomiast wyjście równe 0.1 znaczyłoby, że model z pewnością 10% przewiduje, że sesja zakończy się zakupem.<b>\n",
+    "\n",
+    "W ten sposób informacja zwrotna z modelu będzie dla konsultantów bardziej informatywna, niż jakby model zwracał tylko wartości binarne."
    ],
    "metadata": {
     "collapsed": false,
@@ -112,7 +114,15 @@
    "cell_type": "markdown",
    "source": [
     "## II.2. Atrybuty wejściowe\n",
-    "Dane o sesji, w postaci zdarzeń, które wystąpiły w ramach sesji użytkownika, której zakończenie przewidujemy. Zakładamy, że w przekazywanych danych będą również informacje o kliencie sklepu, a także o produktach, których sesja dotyczy."
+    "Dane o sesji, w postaci zdarzeń, które wystąpiły w ramach sesji użytkownika, której zakończenie przewidujemy. Zakładamy, że w przekazywanych danych będą również informacje o kliencie sklepu, a także o produktach, których sesja dotyczy.\n",
+    "Wybrane przez nas atrybuty wejściowe:\n",
+    "- zaoferowana zniżka\n",
+    "- łączna cena produktów przeglądanych w sesji\n",
+    "- liczba produktów z każdej kategorii przeglądanych w ramach sesji\n",
+    "- długość sesji\n",
+    "- płeć\n",
+    "- liczba wyświetleń produktów w ramach sesji\n",
+    "- miesiąc, dzień, godzina, dzień tygodnia"
    ],
    "metadata": {
     "collapsed": false,
