final service and project

--- a/models/naive_model/naive_model.ipynb
+++ b/models/naive_model/naive_model.ipynb
@@ -68,7 +68,7 @@
    "execution_count": 35,
    "outputs": [],
    "source": [
-    "df_sessions = pd.read_json(path_or_buf='../data/raw/sessions.jsonl', lines=True)"
+    "df_sessions = pd.read_json(path_or_buf='../../data/raw/sessions.jsonl', lines=True)"
    ],
    "metadata": {
     "collapsed": false,
