--- a/notebooks/model_selection/model_selection.ipynb
+++ b/notebooks/model_selection/model_selection.ipynb
@@ -172,67 +172,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Regresja liniowa"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "LinearRegression()"
-     },
-     "execution_count": 172,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "linear_reg = LinearRegression()\n",
-    "linear_reg.fit(X_train, y_train)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "1.0"
-     },
-     "execution_count": 173,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "linear_reg_scores = cross_val_score(linear_reg, X_test, y_test, cv=10)\n",
-    "linear_reg_scores.mean()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Las losowy"
+    "### Las losowy"
    ],
    "metadata": {
     "collapsed": false,
@@ -1325,24 +1265,12 @@
    "cell_type": "markdown",
    "source": [
     "## Wnioski:\n",
-    "Wybraliśmy las losowy ze względu na bardzo szybki trening i bardzo dobre wyniki oraz sieć neuronową. Regresja liniowa prawie zawsze dawała 100% dobrych wyników, co wydało nam się podejrzane."
+    "Wybraliśmy las losowy ze względu na bardzo szybki trening i bardzo dobre wyniki oraz sieć neuronową."
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
     }
    }
   }
