final service and project

--- a/reports/problem_definition.ipynb
+++ b/reports/problem_definition.ipynb
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "source": [
     "## II.3. Wyjście modelowania\n",
-    "Decyzja o tym, czy dana sesja zakończy się zakupem czy nie."
+    "W przypadku modelu prostego, decyzja o tym, czy dana sesja zakończy się zakupem czy nie, natomiast w przypadku modelu zaawansowanego - prawdopodobieństwo zakończenia zakupem."
    ],
    "metadata": {
     "collapsed": false,
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "source": [
     "## III.1. Kryteria biznesowe\n",
-    "System ma poprawić obecną sytuację - informacja o zakończeniu sesji zakupem będzie przewidywana przed jej zakończeniem<b>, przy czym przewidywania te mają być lepsze od takich, które są zupełnie losowe czy przewidywane jedynie na podstawie długości trwania sesji danego użytkownika</b>.\n"
+    "System ma poprawić obecną sytuację - informacja o zakończeniu sesji zakupem będzie przewidywana przed jej zakończeniem<b>, przy czym przewidywania te mają być lepsze od takich, które są przewidywane jedynie na podstawie długości trwania sesji danego użytkownika</b>.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -188,7 +188,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "<b>W celu wyznaczenia dokładnej wartości współczynnika $\\alpha$ na posiadanych już danych, wykonaliśmy odpowiednie obliczenia w notatniku naive_model.ipynb, gdzie stworzyliśmy model działający w sposób naiwny. Na podstawie wyliczeń na otrzymanych danych uznaliśmy, że próg decydujący o zakończeniu sesji zakupem dla modelu naiwnego (o najwyszym accuracy) będzie wynosił 5 sekund czasu trwania sesji.</b>\n",
+    "<b>W celu wyznaczenia dokładnej wartości współczynnika $\\alpha$ na posiadanych już danych, wykonaliśmy odpowiednie obliczenia w notatniku models/naive_model/naive_model.ipynb, gdzie stworzyliśmy model działający w sposób naiwny. Na podstawie wyliczeń na otrzymanych danych uznaliśmy, że próg decydujący o zakończeniu sesji zakupem dla modelu naiwnego (o najwyszym accuracy) będzie wynosił 5 sekund czasu trwania sesji.</b>\n",
     "\n",
     "<b>Na podstawie decyzji modelu (posiłkującego się tym progiem) wyliczyliśmy współczynnik $\\alpha$ na dostępnych danych: </b>$$\\alpha=0.69$$"
    ],
